fix: let tutorial table rows grow to fit content
Restore the side-by-side tutorials table and fix the original issue
where tall content (multi-line title + multiple trainers) overflowed
above the white box. Use min-height instead of a fixed row height so
rows grow to fit, and let flexbox stretch keep the date and info
columns equal height.

--- a/_sass/training.sass
+++ b/_sass/training.sass
@@ -10,8 +10,12 @@
       // overflow-x: scroll
     .table-item
       display: flex
-      flex-flow: column
+      min-height: 6em
       width: 100%
+      @media only screen and (max-width: 800px)
+        height: auto
+        flex-wrap: wrap
+        // min-width: 759px
       &:nth-child(odd)
         background-color: #e32dfd
       &:nth-child(even)
@@ -22,7 +26,9 @@
         flex-flow: column
         flex-grow: 1
         justify-content: center
-        width: 100%
+        width: 33%
+        @media only screen and (max-width: 800px)
+          width: 100%
       .item-hours
         color: #ffffff
         font-weight: 500
@@ -30,11 +36,14 @@
         font-size: 1.2em
         padding: 1em 0
       .item-training
-        align-items: center
+        align-items: flex-start
         background-color: #fff
+        border-right: solid #f3f7f8 .1em
         border-bottom: dashed #f3f7f8 .1em
         color: #161616
         padding: 1em 3em
+        @media only screen and (max-width: 800px)
+          align-items: center
         .item-title
           color: #0474ab
           cursor: pointer
